<resources>
    <string name="app_name">Habits</string>
    <string name="add_habit">Добавить привычку</string>
    <string name="check_habit">Выбрать привычку</string>
    <string name="hint_name">Название</string>
    <string name="habit_description">Описание</string>
    <string name="habit_type">Тип привычки</string>
    <string name="habit_priority">Приоритет</string>
    <string name="good_habit">Хорошая привычка</string>
    <string name="bad_habit">Плохая привычка</string>
    <string name="habit_period">Периодичность</string>
    <string name="repeat">Повторять</string>
    <string name="times">раз</string>
    <string name="days">дней</string>
    <string name="choose_color">Выбрать цвет</string>
    <string name="save">Сохранить</string>
    <string name="period_string">%1$s раз в %2$s дней</string>
    <string name="my_habits">Мои привычки</string>
    <string name="habit_added">Привычка добавлена</string>
    <string name="cancel">Отменить</string>
    <string name="habit_edited">Привычка изменена</string>
    <string name="fill_in_required_fields">Заполните недостающие поля</string>
    <string name="create_habit">Создать привычку</string>
    <string name="app_title">Название</string>
    <string name="app_version">Версия</string>
    <string name="app_developer">Разработчик</string>
    <string name="developer_name_value">Черняк А.О.</string>
    <string name="app_version_value">alpha_0.1</string>
    <string name="app_title_value">Мои привычки</string>
    <string name="logo">Логотип</string>
    <string name="habits_list">Список привычек</string>
    <string name="application_info">Информация о приложении</string>
    <string name="navigation_open">open</string>
    <string name="navigation_close">close</string>

    <!-- priority spinner data -->
    <string-array name="prioritySpinnerDataArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goods">Хорошие</string>
    <string name="bads">Плохие</string>
</resources>