<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:paddingStart="@dimen/spacing_compact_24"
    android:paddingTop="@dimen/spacing_medium_16"
    android:paddingEnd="@dimen/spacing_compact_24">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.HabitCreatorActivity">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/habitNameEditText"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_color_green"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/habitDescriptionEditText"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_color_green"
            android:hint="@string/habit_description"
            android:inputType="textMultiLine"
            android:maxLines="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/habitNameEditText" />

        <View
            android:id="@+id/view5"
            style="@style/habitCreatorDividerStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/spacing_medium_16"
            app:layout_constraintBottom_toTopOf="@id/priorityLabelTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/habitDescriptionEditText" />

        <TextView
            android:id="@+id/priorityLabelTextView"
            style="@style/habitCreatorSubtitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium_16"
            android:text="@string/habit_priority"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/prioritySpinner"
            style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/prioritySpinnerDataArray"
            app:layout_constraintBottom_toBottomOf="@+id/priorityLabelTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/priorityLabelTextView" />

        <View
            android:id="@+id/view3"
            style="@style/habitCreatorDividerStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/spacing_medium_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priorityLabelTextView" />

        <TextView
            android:id="@+id/habitTypeLabelTextView"
            style="@style/habitCreatorSubtitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/habit_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <RadioGroup
            android:id="@+id/habitTypesRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/habitTypeLabelTextView">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/goodHabitRadioButton"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary_color_green"
                android:checked="true"
                android:text="@string/good_habit" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/badHabitRadioButton"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary_color_green"
                android:text="@string/bad_habit" />

        </RadioGroup>

        <View
            android:id="@+id/view"
            style="@style/habitCreatorDividerStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/spacing_small_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/habitTypesRadioGroup" />

        <TextView
            android:id="@+id/periodLabelTextView"
            style="@style/habitCreatorSubtitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny_4"
            android:layout_marginTop="@dimen/spacing_medium_16"
            android:text="@string/habit_period"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny_4"
            android:layout_marginTop="@dimen/spacing_medium_16"
            android:text="@string/repeat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/periodLabelTextView" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/periodTimesEditText"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="@dimen/period_edit_text_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny_4"
            android:backgroundTint="@color/primary_color_green"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@id/textView3"
            app:layout_constraintEnd_toStartOf="@id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny_4"
            android:text="@string/times"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/periodTimesEditText"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/periodDaysEditText"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="@dimen/period_edit_text_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny_4"
            android:backgroundTint="@color/primary_color_green"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny_4"
            android:text="@string/days"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/periodDaysEditText"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <View
            android:id="@+id/view2"
            style="@style/habitCreatorDividerStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/spacing_medium_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/periodDaysEditText" />

        <TextView
            android:id="@+id/textView6"
            style="@style/habitCreatorSubtitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_color"
            app:layout_constraintBottom_toBottomOf="@id/selectedColorView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/selectedColorView" />

        <View
            android:id="@+id/selectedColorView"
            android:layout_width="@dimen/selectedColorViewSize"
            android:layout_height="@dimen/selectedColorViewSize"
            android:layout_marginTop="@dimen/spacing_compact_24"
            android:layout_marginEnd="@dimen/spacing_tiny_4"
            android:background="@drawable/selected_color_background"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <ScrollView
            android:id="@+id/colorScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny_4"
            android:layout_marginTop="@dimen/spacing_compact_24"
            android:layout_marginEnd="@dimen/spacing_tiny_4"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectedColorView"
            tools:background="@color/teal_200" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createHabitButton"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:layout_width="@dimen/create_habit_button_width"
            android:layout_height="@dimen/create_habit_button_height"
            android:layout_marginTop="@dimen/spacing_compact_24"
            android:background="@drawable/create_button_background"
            android:onClick="createHabitButtonClick"
            android:text="@string/create"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/colorScrollView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
